[package]
name = "io-socket"
description = "I/O-free socket client library"
version = "0.0.1"
authors = ["Clément DOUIN <pimalaya.org@posteo.net>"]
rust-version = "1.87"
edition = "2024"
license = "MIT OR Apache-2.0"
categories = ["api-bindings", "no-std"]
keywords = ["io-free", "no-std", "coroutine", "socket", "stream"]
homepage = "https://pimalaya.org"
documentation = "https://docs.rs/io-socket/latest/io_socket"
repository = "https://github.com/pimalaya/io-socket"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = []
std-stream = []
std-udp-socket = []
tokio-stream = ["dep:tokio"]

[[example]]
name = "std_http10_rustls"
required-features = ["std-stream"]

[[example]]
name = "std_udp_dns_query"
required-features = ["std-udp-socket"]

[[example]]
name = "tokio_tcp_repl"
required-features = ["tokio-stream"]

[dev-dependencies]
env_logger = "0.11"
memchr = "2.7"
rustls = { version = "0.23", default-features = false, features = ["logging", "ring", "std", "tls12"] }
rustls-platform-verifier = "0.6"
tokio = { version = "1", features = ["full"] }
url = "2.5"

[dependencies]
log = "0.4"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }
